# PyIndexNum

./: LICENSE  PLAN.md  README.md  index_description.md  pyproject.toml
.github/workflows/: python-publish.yml  test.yml
docs/: conf.py  contributing.md
docs/_static/: custom.css
docs/api/: index.rst
docs/examples/: workflow.md
src/pyindexnum/: __init__.py  bilateral.py  extension.py  multilateral.py  utils.py
tests/: performance_price_data.csv  test_bilateral.py  test_data.csv  test_extension.py  test_multilateral.py  test_utils.py
