[project]
name = "pyindexnum"
version = "0.1.1"
description = "Python library for index numbers calculations"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26.4,<2.0.0",
    "polars>=1.37.1",
    "scipy>=1.11.0",
]

[project.urls]
Homepage = "https://github.com/paluigi/PyIndexNum"
Documentation = "https://pyindexnum.readthedocs.io/"
Repository = "https://github.com/paluigi/PyIndexNum"
Issues = "https://github.com/paluigi/PyIndexNum/issues"
Changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.0",
]
