[project]
name = "pyindexnum"
version = "0.1.1"
description = "Python library for index numbers calculations"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26.4,<2.0.0",
    "polars>=1.37.1",
    "scipy>=1.11.0",
]
keywords = ["index", "indices", "price index", "price indices", "index numbers", "economics", "statistics"]
license = "MIT"
license-files = ["LICEN[CS]E*"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Office/Business",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries"
]


[project.urls]
Homepage = "https://github.com/paluigi/PyIndexNum"
Documentation = "https://pyindexnum.readthedocs.io/"
Repository = "https://github.com/paluigi/PyIndexNum"
Issues = "https://github.com/paluigi/PyIndexNum/issues"
Changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.0",
]
